--- a/BeautySalonService/Areas/AdminPart/Views/CMSSalon/Index.cshtml
+++ b/BeautySalonService/Areas/AdminPart/Views/CMSSalon/Index.cshtml
@@ -32,7 +32,7 @@
                     <tbody>
 
                         <tr ng-repeat="Item in ListAllSSalonServices">
-                            <td>{{Item.IDService}}-{{Item.ID}}</td>
+                            <td>{{Item.ID_Service}}</td>
                             <td>{{Item.Name}}</td>
 
 
@@ -47,7 +47,7 @@
                                 </div>
                             </td>
                             <td>
-                                <input type="button" class="btn btn-primary" value="حذف" ng-click="FuncDeleteService(Item.ID)" />
+                                <input type="button" class="btn btn-primary" value="حذف" ng-click="FuncDeleteService(Item.ID_Service)" />
                             </td>
 
 
@@ -458,14 +458,14 @@
                 <button type="button" ng-click="FuncDelete(Item.ID)" class="btn btn-alt-primary" data-dismiss="modal" title="حذف">
                     <i class="far fa-trash-alt"></i>
                 </button>
-                <button type="button" ng-click=" funcassignmanager(item)" class="btn btn-alt-primary" data-dismiss="modal" title="پرسنل">
+                <button type="button" ng-click="" class="btn btn-alt-primary" data-dismiss="modal" title="پرسنل">
                     <i class="fas fa-users"></i>
                 </button>
                
                 <button type="button" ng-click="FuncAssignService(Item.ID)" class="btn btn-alt-primary" data-dismiss="modal" title="خدمات">
                     <i class="fas fa-tasks"></i>
                 </button>
-                <button type="button" ng-click="FuncAssignService(Item.ID)" class="btn btn-alt-primary" data-dismiss="modal" title="گالری">
+                <button type="button" ng-click="" class="btn btn-alt-primary" data-dismiss="modal" title="گالری">
                     <i class="fas fa-camera-retro"></i>
                 </button>
             </td>
