--- a/BeautySalonService/Areas/AdminPart/Views/Shared/_Layout.cshtml
+++ b/BeautySalonService/Areas/AdminPart/Views/Shared/_Layout.cshtml
@@ -133,7 +133,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </a>
                     <ul class="collapse list-unstyled" id="pageSubmenu3">
                         <li>
-                            <a href="login.html">اعضای سایت</a>
+                            <a href="/AdminPart/CMSPerson/Index">اعضای سایت</a>
                         </li>
                         <li>
                             <a href="register.html">مقالات هر عضو</a>
