change to appearences

--- a/BeautySalonService/Views/Home/About.cshtml
+++ b/BeautySalonService/Views/Home/About.cshtml
@@ -23,10 +23,10 @@
  
 
     <div class="container">
-        <div class="navbar-brand text-white">
-            <h1>
-                دانستنی ها
-            </h1>
+        <div class="navbar-brand text-white text-center">
+            
+              
+           
         </div>
         <div class="banner-text text-center">
             <div class="callbacks_container">
