--- a/BeautySalonService/Views/Shared/_Layout.cshtml
+++ b/BeautySalonService/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
     <link rel="stylesheet" href="~/Assets/css/smoothbox.css" type='text/css' media="all" />
     <!-- banner slider -->
     <link rel="stylesheet" href="~/Assets/css/ken-burns.css" type="text/css" media="all" />
+    <link href="~/Areas/AdminPart/Assets/css/fontawesome-all.css" rel="stylesheet">
     @*<!-- fontawesome -->
     <link href="~/Assets/css/fontawesome-all.css" rel="stylesheet">
     <!-- online fonts -->
