--- a/BeautySalonService/Views/Shared/_Layout.cshtml
+++ b/BeautySalonService/Views/Shared/_Layout.cshtml
@@ -62,8 +62,10 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                             <li class="nav-item mr-lg-3 mt-lg-0 mt-3">
                                 <a class="nav-link" href="/Home/Contact">تماس با ما</a>
                             </li>
-
-                            <li class="nav-item dropdown {{activeDrp}} mr-lg-3 mt-lg-0 mt-3">
+                            <li class="nav-item mr-lg-3 mt-lg-0 mt-3">
+                                <a class="nav-link" href="/Home/Services"> خدمات </a>
+                            </li>
+                            @*<li class="nav-item dropdown {{activeDrp}} mr-lg-3 mt-lg-0 mt-3">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                                    aria-expanded="false">
                                     منو
@@ -72,10 +74,10 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                                     <a class="dropdown-item" href="/Home/Services">خدمات</a>
                                     <a class="dropdown-item" href="/Home/Salons">سالن ها</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="/Home/Articles"> مقالات</a>
+                                    <a class="dropdown-item" href="/Articles"> مقالات</a>
 
                                 </div>
-                            </li>
+                            </li>*@
                             <li class="nav-item dropdown {{activeMembership}} mr-lg-3 mt-lg-0 mt-3">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                                    aria-expanded="false">
@@ -156,7 +158,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                         </h3>
                     </div>
                     <div class="col-lg-7 mt-lg-0 mt-3 px-lg-5">
-                        <p   ng-bind-html="Comment | unsafe"></p>
+                        <p   ng-bind-html="Comment | unsafe" class="text-right "></p>
                        
                     </div>
                 </div>
@@ -194,6 +196,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                                             {{Item.Name}}
                                         </h4>
                                         <h4 class="text-lg-center text-white">{{Item.Phone}}</h4>
+                                        
                                     </div>
                                 </div>
                                 <div class="overlay">
