--- a/BeautySalonService/Views/Shared/_Layout.cshtml
+++ b/BeautySalonService/Views/Shared/_Layout.cshtml
@@ -202,6 +202,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                                 <div class="overlay">
                                     <div style="background-color: #d56e9b">
                                         <h4 class="text-lg-center text-dark font-weight: bold">{{Item.Name}}</h4>
+                                        <input type="button" class="btn btn-light" value="بیشتر" ng-click="FuncShowSalonPage(Item)" />
                                         <p class="text-lg-center text-dark font-weight: bold">{{Item.Address}}</p>
                                        </div>
                                     </div>
