--- a/BeautySalonService/Views/Salon/Index.cshtml
+++ b/BeautySalonService/Views/Salon/Index.cshtml
@@ -1,4 +1,11 @@
 ﻿
+ <!-- banner bottom -->
+
+<!-- //banner bottom -->
+<!-- services -->
+
+<!-- //services -->
+<!-- services-main -->
 <section class="about-w3ls py-md-5 py-3" id="about">
     <div class="container">
         <div class="row py-sm-5 py-3">
@@ -6,26 +13,31 @@
                 <div class="wthree-title pb-sm-5 pb-3">
                     <h3 class="agile-title">
 
-                        {{ServiceName}}
-                        <br> {{TitleArticle}}
-                        <span class="title-pos">{{ID_Service}} کد سرویس</span>
+                        {{Name}}
+                        <br> {{Phone}}
+                        <br> {{Address}}
+                        <br> {{Manager}}
+                        <br> {{CityName}}
+                        <span class="title-pos">{{ID_Salon}} کد سالن</span>
                     </h3>
-                    <p ng-bind-html="SiteContentArticleOfService | unsafe" class="text-right mt-5"></p>
+                    <p ng-bind-html="Description | unsafe" class="text-right mt-5"></p>
                 </div>
 
-                <img ng-src="@Url.Content("~/FileArchives/Service/{{ServicePicturePath}}")" alt="{{ServicePicturePath}}" class="img-fluid" />
+                <img ng-src="@Url.Content("~/FileArchives/Salon/{{PicturePath}}")" alt="{{PicturePath}}" class="img-fluid" />
 
             </div>
             <div class="col-lg-6 mt-lg-0 mt-5">
-                <div class="main-services" ng-repeat="Item in ListAllSalonsOfService">
+                <div class="main-services" ng-repeat="Item in ListAllServicesOfSalon">
                     <div class="row">
                         <div class="col-2">
                             <span class="fas fa-angle-right"></span>
                         </div>
                         <div class="col-10">
-                            <h6>{{Item.ID_Salon}}</h6>
+
+                           
+                            <h6>{{Item.ID_Service}}</h6>
                             <h5>{{Item.Name}}</h5>
-                             <p><img ng-src="@Url.Content("~/FileArchives/Service/{{Item.PicturePath}}")" alt="{{Item.PicturePath}}" class="img-fluid" /></p>
+                            <!-- <p><img ng-src="@Url.Content("~/FileArchives/SalonService/{{Item.PicturePath}}")" alt="{{Item.PicturePath}}" class="img-fluid" /></p>-->
                             <p>
 
 
@@ -39,8 +51,18 @@
             </div>
 
 
-            <input type="button" class="btn btn-light" value="<<" ng-click="FuncGetSalonsOfService(PageNumSalonsOfService, PageSizeSalonsOfService, 'Prev', ID_Service))" />
-            <input type="button" class="btn btn-light" value=">>" ng-click="FuncGetSalonsOfService(PageNumSalonsOfService, PageSizeSalonsOfService, 'Next', ID_Service))" />
+            <input type="button" class="btn btn-light" value="<<" ng-click="FuncGetServicesOfSalon(PageNumSalonsOfService, PageSizeSalonsOfService, 'Prev', ID_Service))" />
+            <input type="button" class="btn btn-light" value=">>" ng-click="FuncGetServicesOfSalon(PageNumSalonsOfService, PageSizeSalonsOfService, 'Next', ID_Service))" />
         </div>
     </div>
 </section>
+<!-- //services-main-->
+<!-- stats -->
+
+<!-- //stats -->
+@section DeclareJS{
+
+
+    <script src="~/Scripts/JSScripts/JSSalon/JSSalon.js"></script>}
+
+
