--- a/BeautySalonService/Views/Salon/Index.cshtml
+++ b/BeautySalonService/Views/Salon/Index.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿@{
+   
+    Layout = "~/Views/Shared/_LayoutSalon.cshtml";
+}
+
+
  <!-- banner bottom -->
 
 <!-- //banner bottom -->
@@ -8,25 +13,7 @@
 <!-- services-main -->
 <section class="about-w3ls py-md-5 py-3" id="about">
     <div class="container">
-        <div class="row py-sm-5 py-3">
-            <div class="col-lg-6">
-                <div class="wthree-title pb-sm-5 pb-3">
-                    <h3 class="agile-title">
-
-                        {{Name}}
-                        <br> {{Phone}}
-                        <br> {{Address}}
-                        <br> {{Manager}}
-                        <br> {{CityName}}
-                        <span class="title-pos">{{ID_Salon}} کد سالن</span>
-                    </h3>
-                    <p ng-bind-html="Description | unsafe" class="text-right mt-5"></p>
-                </div>
-
-                <img ng-src="@Url.Content("~/FileArchives/Salon/{{PicturePath}}")" alt="{{PicturePath}}" class="img-fluid" />
-
-            </div>
-            <div class="col-lg-6 mt-lg-0 mt-5">
+                <div class="col-lg-6 mt-lg-0 mt-5">
                 <div class="main-services" ng-repeat="Item in ListAllServicesOfSalon">
                     <div class="row">
                         <div class="col-2">
@@ -35,7 +22,7 @@
                         <div class="col-10">
 
                            
-                            <h6>{{Item.ID_Service}}</h6>
+                            <h6>کد سرویس:{{Item.ID_Service}}</h6>
                             <h5>{{Item.Name}}</h5>
                             <!-- <p><img ng-src="@Url.Content("~/FileArchives/SalonService/{{Item.PicturePath}}")" alt="{{Item.PicturePath}}" class="img-fluid" /></p>-->
                             <p>
@@ -51,10 +38,10 @@
             </div>
 
 
-            <input type="button" class="btn btn-light" value="<<" ng-click="FuncGetServicesOfSalon(PageNumSalonsOfService, PageSizeSalonsOfService, 'Prev', ID_Service))" />
-            <input type="button" class="btn btn-light" value=">>" ng-click="FuncGetServicesOfSalon(PageNumSalonsOfService, PageSizeSalonsOfService, 'Next', ID_Service))" />
+        <input type="button" class="btn btn-light" value="<<" ng-click="FuncGetServicesOfSalon(PageNumServicesOfSalon, PageSizeServicesOfSalon, 'Prev',ID_Salon)" />
+        <input type="button" class="btn btn-light" value=">>" ng-click="FuncGetServicesOfSalon(PageNumServicesOfSalon, PageSizeServicesOfSalon, 'Next', ID_Salon)" />
         </div>
-    </div>
+   
 </section>
 <!-- //services-main-->
 <!-- stats -->
