--- a/BeautySalonService/Views/Salon/Index.cshtml
+++ b/BeautySalonService/Views/Salon/Index.cshtml
@@ -44,9 +44,13 @@
    
 </section>
 <!-- //services-main-->
-<!-- stats -->
-
-<!-- //stats -->
+<!-- articles -->
+<h5 class="pt-4 pb-3">مقالات</h5>
+<div class="d-flex flex-column bg-flex">
+    <div class="p-2 bg-flex mb-1 bg-flex-item" ng-repeat="Item in ListAllArticleOfSalonManager">Flex item 1</div>
+   
+</div>
+<!-- //articles -->
 @section DeclareJS{
 
 
