--- a/BeautySalonService/Areas/AdminPart/Assets/css/style.css
+++ b/BeautySalonService/Areas/AdminPart/Assets/css/style.css
@@ -808,8 +808,8 @@ ul.icon-navigation li a {
 }
 
 .copyright-w3layouts {
-	background: #151414;
-	border-top: 1px solid #464646;
+	background: #d56e9b;
+	border-top: 1px solid #d56e9b;
 }
 
 .bg-page .copyright-w3layouts p {
