--- a/BeautySalonService/Views/Shared/_Layout.cshtml
+++ b/BeautySalonService/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" href="/Home/Services">خدمات</a>
-                                    <a class="dropdown-item" href="/Home/AllSalon">سالن ها</a>
+                                    <a class="dropdown-item" href="/Salon/IndexAllSalon">سالن ها</a>
                                    
                                     <a class="dropdown-item" href="/Articles"> دانستنی ها</a>
 
