--- a/BeautySalonService/Views/Salon/IndexAllSalon.cshtml
+++ b/BeautySalonService/Views/Salon/IndexAllSalon.cshtml
@@ -53,9 +53,11 @@
                             <div class="w3_agile_gallery_effect">
                                 <a href="@Url.Content("~/FileArchives/Salon/{{ListAllSalon[0].PicturePath}}")" class="sb" title="{{ListAllSalon[0].Name}}">
                                     <figure>
-                                        <img src="@Url.Content("~/FileArchives/Salon/{{ListAllSalon[0].PicturePath}}")" alt="{{ListAllSalon[0].PicturePath}}" class="img-fluid" />
+                                        <img src="@Url.Content("~/FileArchives/Salon/{{ListAllSalon[0].PicturePath}}")" alt="{{ListAllSalon[0].PicturePath}}" class="img-fluid" width="300" height="300"/>
+                                       
                                     </figure>
                                 </a>
+                                <input type="button" class="btn-outline-info" value="بیشتر بدانید" ng-click="FuncShowSalonPage(ListAllSalon[0])" />
                             </div>
                         </div>
                         <div class="agileits_w3layouts_gallery_grid1 hover14">
@@ -65,6 +67,7 @@
                                         <img src="@Url.Content("~/FileArchives/Salon/{{ListAllSalon[1].PicturePath}}")" alt="{{ListAllSalon[1].PicturePath}}" class="img-fluid" />
                                     </figure>
                                 </a>
+                                <input type="button" class="btn-outline-info" value="بیشتر بدانید" ng-click="FuncShowSalonPage(ListAllSalon[1])" />
                             </div>
                         </div>
                         <div class="agileits_w3layouts_gallery_grid1 hover14">
@@ -74,6 +77,7 @@
                                         <img src="@Url.Content("~/FileArchives/Salon/{{ListAllSalon[2].PicturePath}}")" alt="{{ListAllSalon[2].PicturePath}}" class="img-fluid" />
                                     </figure>
                                 </a>
+                                <input type="button" class="btn-outline-info" value="بیشتر بدانید" ng-click="FuncShowSalonPage(ListAllSalon[2])" />
                             </div>
                         </div>
                     </div>
@@ -85,6 +89,7 @@
                                         <img src="@Url.Content("~/FileArchives/Salon/{{ListAllSalon[3].PicturePath}}")" alt="{{ListAllSalon[3].PicturePath}}" class="img-fluid" />
                                     </figure>
                                 </a>
+                                <input type="button" class="btn-outline-info" value="بیشتر بدانید" ng-click="FuncShowSalonPage(ListAllSalon[3])" />
                             </div>
                         </div>
                         <div class="agileits_w3layouts_gallery_grid1 hover14">
@@ -94,6 +99,7 @@
                                         <img src="@Url.Content("~/FileArchives/Salon/{{ListAllSalon[4].PicturePath}}")" alt="{{ListAllSalon[4].PicturePath}}" class="img-fluid" />
                                     </figure>
                                 </a>
+                                <input type="button" class="btn-outline-info" value="بیشتر بدانید" ng-click="FuncShowSalonPage(ListAllSalon[4])" />
                             </div>
                         </div>
                         <div class="agileits_w3layouts_gallery_grid1 hover14">
@@ -103,6 +109,7 @@
                                         <img src="@Url.Content("~/FileArchives/Salon/{{ListAllSalon[5].PicturePath}}")" alt="{{ListAllSalon[5].PicturePath}}" class="img-fluid" />
                                     </figure>
                                 </a>
+                                <input type="button" class="btn-outline-info" value="بیشتر بدانید" ng-click="FuncShowSalonPage(ListAllSalon[5])" />
                             </div>
                         </div>
                         <div class="agileits_w3layouts_gallery_grid1 hover14">
@@ -112,6 +119,7 @@
                                         <img src="@Url.Content("~/FileArchives/Salon/{{ListAllSalon[6].PicturePath}}")" alt="{{ListAllSalon[6].Name}}" class=" img-fluid" />
                                     </figure>
                                 </a>
+                                <input type="button" class="btn-outline-info" value="بیشتر بدانید" ng-click="FuncShowSalonPage(ListAllSalon[6])" />
                             </div>
                         </div>
                     </div>
