--- a/BeautySalonService/Views/Shared/_Layout.cshtml
+++ b/BeautySalonService/Views/Shared/_Layout.cshtml
@@ -199,14 +199,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         <h4 class="text-lg-center text-white font-weight-bolder">
                                             {{Item.Name}}
                                         </h4>
-                                        <h4 class="text-lg-center text-white">{{Item.Phone}}</h4>
+                                        @*<h4 class="text-lg-center text-white">{{Item.Phone}}</h4>*@
                                         
                                     </div>
                                 </div>
                                 <div class="overlay">
                                     <div style="background-color: #d56e9b">
                                         <h4 class="text-lg-center text-dark font-weight: bold">{{Item.Name}}</h4>
-                                        <p class="text-lg-center text-dark font-weight: bold"> <input type="button" class="btn btn-dark"  value="اطلاعات بیشتر" ng-click="FuncShowSalonPage(Item)" /></p>
+                                        <p class="text-lg-center text-dark font-weight: bold"> <input type="button" class="btn-outline-info"  value="بیشتر بدانید" ng-click="FuncShowSalonPage(Item)" /></p>
 <p class="text-lg-center text-dark font-weight: bold">{{Item.Address}}</p>
                                        </div>
                                     </div>
