--- a/BeautySalonService/Views/Shared/_LayoutSalon.cshtml
+++ b/BeautySalonService/Views/Shared/_LayoutSalon.cshtml
@@ -11,8 +11,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <title>Beauty Salon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Natural Spa Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+    <meta name="keywords" content="سالن های زیبایی, آرایشگاه, مو, گریم,
+آرایش, کوتاهی, اپیلاسیون, صورت, چهره, جذابیت" />
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
