--- a/BeautySalonService/Views/Person/Index.cshtml
+++ b/BeautySalonService/Views/Person/Index.cshtml
@@ -98,6 +98,12 @@
             <button type="submit" ng-disabled="myForm.$invalid" class="btn btn-primary error-w3l-btn mt-sm-5 mt-3 px-4">با فشردن این دکمه اطلاعات شما ارسال و  عضو ما می شوید</button>
 </fieldset>
 </form>
+<script type="text/javascript">
+    $(function () {
+        $("#input1, #span1").persianDatepicker();
+    });
+</script>
+
 
     @section DeclareJS{
         <script src="~/Scripts/JSScripts/JSRegister/JSRegister.js"></script>
