--- a/BeautySalonService/Views/Home/googlemap.cshtml
+++ b/BeautySalonService/Views/Home/googlemap.cshtml
@@ -44,5 +44,10 @@
 
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL2uTS2CAPF4RTj5r2DOg9AwI1jjYIvvc&callback=initMap"
         async defer></script>
+
+@section DeclareJS{
+
+
+    <script src="~/Scripts/JSScripts/JSHome/JSlayout.js"></script>}
