--- a/BeautySalonService/Views/Shared/_Layout.cshtml
+++ b/BeautySalonService/Views/Shared/_Layout.cshtml
@@ -265,7 +265,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <!-- //footer grid1 -->
                     <!-- footer grid3 -->
                     <div class="col-lg-4  col-sm-6 footv3-left my-sm-0 my-4">
-                        <h3 class="mb-4">دانستنی های جدید</h3>
+                        <h3 class="mb-4" ng-show="ListAllNewArticle.length!=0">دانستنی های جدید</h3>
                         <ul class="list-agileits">
                             <li ng-repeat="Item in ListAllNewArticle">
                                 <a href="/">
